avoid logo flicker

--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -61,6 +61,7 @@ html, body {
 
 .navbar .logo img {
   height: 32px;
+  width: 32px;
 }
 
 h2 small {
